--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,480 @@
-.App{
-    display: flex;
-    flex-direction: row;
+.visible {
+    z-index: 100;
 }
 
-.visible{
-    z-index: 100;
+.container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    background-color: rgb(5, 5, 25);
+    color: white;
+    position: relative;
+}
+
+.section_ {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 16px;
+    flex-wrap: wrap;
+    width: 100%;
+    height: calc(100% - 80px);
+    flex-grow: 1;
+}
+
+.section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    flex-wrap: wrap;
+    width: 100%;
+    height: calc(100% - 80px);
+}
+
+.visible_ {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.invisible_ {
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+    pointer-events: none;
+}
+
+.section .text-container {
+    max-width: 580px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 32px;
+}
+
+.text-container h2{
+    font-weight: 100;
+}
+
+.section .image-container {
+    width: 270px;
+    height: 270px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 2px dotted white;
+    padding: 4px;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.social-icons {
+    display: flex;
+    gap: 24px;
+}
+
+.social-icons a i {
+    color: white;
+}
+
+.navigator-buttons {
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 16px;
+    position: fixed;
+    top: calc(100vh - 80px);
+}
+
+.navigator-buttons button {
+    padding: 16px;
+}
+
+
+/* ABOUT */
+
+.s-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    flex-grow: 1;
+    width: 100%;
+    height: calc(100% - 80px);
+    padding-top: 16px;
+}
+
+.about-subcontainer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    flex-grow: 1;
+    gap: 24px;
+    padding: 24px
+}
+
+.about-card {
+    width: 30%;
+    min-width: 300px;
+    max-width: 580px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    border: 2px dotted white;
+    border-radius: 16px;
+}
+
+.about-card img{
+    margin-top: 16px;
+    margin-bottom: 16px;
+    width: 70%;
+    height: 150px;
+    border-radius: 16px;
+}
+
+.skills-container {
+    gap: 8px;
+}
+
+.skill {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.skill-info {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.bar {
+    text-align: center;
+    position: relative;
+    z-index: 20;
+    margin-bottom: 30px;
+}
+
+.bar::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    border-radius: 100px;
+    right: 0%;
+    top: 50%;
+    background: linear-gradient(45deg,
+            red, blue, deeppink, blue,
+            red, blue, deeppink, blue);
+    background-size: 900%;
+    border-radius: 100px;
+    animation: glowing 200s linear infinite;
+    z-index: -1;
+}
+
+/* PROJECTS */
+
+.projects-container {
+    overflow-y: scroll;
+    height: 100vh;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+.project-card {
+    width: 450px;
+    position: relative;
+    border-radius: 16px;
+}
+
+.xl {
+    height: 550px;
+}
+
+.md {
+    height: 350px;
+}
+
+.project-image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-image img,
+.project-image video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.project-info {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    padding: 12px;
+    border-radius: 16px;
+    cursor: pointer;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 64px;
+    gap: 16px;
+
+    transition: background 0.4s ease, opacity 0.4s ease;
+    overflow-y: hidden;
+}
+
+.tech-stack {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.tech-stack p {
+    background: rgba(128, 128, 128, 0.577);
+    border-radius: 4px;
+    padding: 4px 8px;
+    font-size: .8rem;
+}
+
+.project-info:hover {
+    background: linear-gradient(180deg,
+            rgba(255, 255, 255, 0),
+            rgba(0, 0, 0, 0.9));
+    opacity: 1;
+}
+
+.project-info:hover h2,
+.project-info:hover p,
+.project-info:hover .tech-stack {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.project-info h2,
+.project-info p,
+.project-info .tech-stack {
+    transform: translateY(200px);
+    opacity: 0;
+    transition: transform 0.4s ease, opacity 0.4s ease;
+}
+
+.projects-grid {
+    column-count: 2;
+    column-gap: 20px;
+    padding: 10px;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.project-card {
+    break-inside: avoid;
+    margin-bottom: 20px;
+}
+
+/* Proyectos side container */
+
+.side-container{
+    width: 100%;
+    min-height: 100vh;
+    max-height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: flex-end;
+    z-index: 99;
+}
+
+.side-info {
+    width: 550px;
+    max-height: 100vh;
+    background-color: rgb(5, 5, 25);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+    padding-bottom: 70px;
+    overflow-y: auto;
+}
+.back{
+    padding: 8px;
+    position: relative;
+    margin-bottom: 24px;
+    background-color: transparent;
+}
+
+.back::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(128, 128, 128, 0.8);
+}
+
+.back button{
+    background-color: transparent;
+    color: #fff;
+}
+
+.side-info h3{
+    margin-top: 16px;
+    font-size: 1.5rem;
+}
+
+.side-info p{
+    font-weight: 100;
+    font-size: 1.15rem;
+}
+
+.side-info .visit-web a{
+    position: fixed;
+    bottom: 0;
+    right: 0px;
+    background-color: rgb(20, 50, 80);
+    width: 550px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color:  #fff;
+    font-weight: 700;
+}
+
+.side-info-image{
+    width: 100%;
+    height: 250px;
+    border-radius: 16px;
+}
+
+.side-info-image img,
+.side-info-image video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.side-info-image video{
+    object-fit:contain;
+}
+
+/* Contact */
+
+.contact-content{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    margin-top: 32px;
+    padding: 16px;
+    width: 100%;
+    max-width: 660px;
+}
+
+.social-contact{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.contact-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-item{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.form-item textarea, .form-item input{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: .5rem;
+    border-radius: 5px;
+    font-size: 14px;
+    border: 1px solid var(--border-color-alt);
+    background-color: var(--nav-container-bg);
+    color: #fff;
+    backdrop-filter: blur(2px);
+}
+
+.btn-submit{
+    width: 100px;
+    padding: .5rem 1rem;
+    font-weight: 700;
+    border-radius: 5px;
+    background-color: var(--button-bg);
+}
+
+.contact-form .btn-submit:hover{
+    box-shadow: 0 0 10px 0 var(--alt-color);
+    cursor: pointer;
+}
+
+.social-contact{
+    width: 100%;
+    max-width: 400px;
+    align-self: center;
+}
+
+.social-contact a{
+    width: 60px;
+    height: 60px;
+    color: white;
+}
+
+.social-contact a i{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
