--- a/src/assets/styles/bgStars.css
+++ b/src/assets/styles/bgStars.css
@@ -1,4 +1,6 @@
 #stars {
+    position: absolute;
+    z-index: 100;
     width: 1px;
     height: 1px;
     background: transparent;
@@ -9,7 +11,8 @@
 #stars:after {
     content: " ";
     position: absolute;
-    top: 2000px;
+    z-index: 100;
+    top: 0px;
     width: 1px;
     height: 1px;
     background: transparent;
@@ -19,6 +22,8 @@
 #stars2 {
     width: 2px;
     height: 2px;
+    position: absolute;
+    z-index: 100;
     background: transparent;
     box-shadow: 1502px 941px blue, 1576px 49px blue, 757px 1868px blue, 1957px 1928px blue, 1307px 979px blue, 1401px 321px blue, 93px 584px blue, 1215px 15px blue, 1367px 1978px blue, 1052px 95px blue, 716px 1006px blue, 205px 188px blue, 1361px 1574px blue, 1954px 1924px blue, 1279px 112px blue, 859px 915px blue, 958px 1337px blue, 1546px 1053px blue, 286px 280px blue, 604px 430px blue, 373px 958px blue, 1043px 1102px blue, 1800px 1766px blue, 1508px 358px blue, 1769px 128px blue, 410px 78px blue, 592px 1350px blue, 487px 1012px blue, 1598px 1137px blue, 1396px 333px blue, 1068px 943px blue, 1292px 607px blue, 832px 566px blue, 1801px 625px blue, 1382px 796px blue, 529px 1px blue, 1459px 594px blue, 592px 1300px blue, 10px 62px blue, 1906px 1910px blue, 821px 1001px blue, 295px 893px blue, 688px 1094px blue, 1810px 942px blue, 356px 1653px blue, 1398px 247px blue, 196px 1048px blue, 750px 1933px blue, 1817px 876px blue, 1167px 606px blue, 476px 1637px blue, 1814px 1756px blue, 45px 1480px blue, 1175px 940px blue, 1380px 868px blue, 1719px 587px blue, 1356px 1001px blue, 1164px 1925px blue, 706px 1553px blue, 1063px 940px blue, 1188px 110px blue, 1903px 1129px blue, 1042px 1787px blue, 1711px 287px blue, 810px 619px blue, 1400px 3px blue, 1987px 736px blue, 1218px 1654px blue, 946px 1567px blue, 1990px 80px blue, 1889px 356px blue, 78px 1142px blue, 1161px 707px blue, 449px 392px blue, 420px 356px blue, 1117px 342px blue, 1458px 359px blue, 1593px 1762px blue, 1277px 1016px blue, 602px 859px blue, 373px 826px blue, 949px 1187px blue, 1062px 326px blue, 314px 334px blue, 1214px 734px blue, 568px 705px blue, 431px 542px blue, 1852px 1882px blue, 818px 1314px blue, 983px 1393px blue, 586px 808px blue, 1797px 1723px blue, 1532px 1072px blue, 1923px 1162px blue, 1021px 318px blue, 1367px 817px blue, 516px 990px blue, 611px 72px blue, 678px 1791px blue, 1621px 67px blue, 339px 996px blue, 1882px 89px blue, 1673px 106px blue, 1431px 612px blue, 862px 1129px blue, 1953px 1800px blue, 1486px 945px blue, 423px 1440px blue, 1795px 1740px blue, 1788px 113px blue, 1862px 713px blue, 1179px 569px blue, 58px 1251px blue, 195px 1629px blue, 1130px 961px blue, 531px 492px blue, 1572px 319px blue, 1898px 1126px blue, 445px 327px blue, 1917px 1192px blue, 92px 1122px blue, 762px 1062px blue, 330px 133px blue, 361px 1360px blue, 162px 1626px blue, 268px 461px blue, 914px 881px blue, 660px 1039px blue, 725px 1752px blue, 1622px 186px blue, 831px 637px blue, 72px 1575px blue, 407px 1498px blue, 396px 1673px blue, 227px 814px blue, 30px 1568px blue, 1036px 81px blue, 248px 33px blue, 1193px 974px blue, 474px 822px blue, 859px 1658px blue, 1645px 1439px blue, 147px 114px blue, 1788px 379px blue, 346px 170px blue, 1421px 1719px blue, 1917px 493px blue, 847px 518px blue, 1492px 677px blue, 1063px 927px blue, 1199px 496px blue, 1119px 531px blue, 830px 1484px blue, 1877px 1361px blue, 304px 983px blue, 196px 1774px blue, 1756px 1400px blue, 1137px 1966px blue, 1113px 545px blue, 324px 1039px blue, 256px 907px blue, 1199px 406px blue, 783px 1710px blue, 708px 350px blue, 1952px 1938px blue, 250px 1812px blue, 100px 1459px blue, 665px 1323px blue, 1456px 89px blue, 326px 1725px blue, 1083px 1196px blue, 1795px 1318px blue, 879px 406px blue, 51px 1376px blue, 748px 500px blue, 926px 1430px blue, 1219px 1992px blue, 144px 657px blue, 1888px 1128px blue, 795px 1707px blue, 446px 315px blue, 187px 1062px blue, 736px 1795px blue, 666px 135px blue, 1592px 354px blue, 638px 1516px blue, 425px 535px blue, 284px 249px blue, 656px 861px blue, 1010px 453px blue, 1581px 667px blue, 1134px 37px blue, 1553px 950px blue, 1123px 186px blue, 911px 785px blue, 1480px 127px blue, 551px 44px blue, 1554px 1763px blue, 64px 108px blue, 371px 1289px blue;
     animation: animStar 100s linear infinite;
@@ -27,7 +32,8 @@
 #stars2:after {
     content: " ";
     position: absolute;
-    top: 2000px;
+    z-index: 100;
+    top: 0px;
     width: 2px;
     height: 2px;
     background: transparent;
@@ -37,6 +43,8 @@
 #stars3 {
     width: 3px;
     height: 3px;
+    position: absolute;
+    z-index: 100;
     background: transparent;
     box-shadow: 205px 658px blue, 1951px 1037px blue, 1522px 479px blue, 598px 1093px blue, 631px 1523px blue, 51px 1601px blue, 1501px 1356px blue, 107px 1711px blue, 1698px 433px blue, 705px 702px blue, 860px 406px blue, 175px 607px blue, 1963px 1019px blue, 1806px 1288px blue, 784px 149px blue, 1937px 1249px blue, 1684px 400px blue, 428px 398px blue, 1485px 512px blue, 541px 1317px blue, 745px 252px blue, 705px 31px blue, 1406px 1333px blue, 1038px 1474px blue, 1356px 589px blue, 1256px 539px blue, 142px 764px blue, 1697px 1267px blue, 461px 1841px blue, 1736px 242px blue, 1468px 1907px blue, 973px 1022px blue, 997px 421px blue, 896px 894px blue, 745px 496px blue, 320px 99px blue, 1944px 465px blue, 1432px 419px blue, 1835px 1676px blue, 283px 230px blue, 770px 361px blue, 1681px 1774px blue, 576px 220px blue, 1400px 579px blue, 1298px 103px blue, 325px 1233px blue, 689px 1885px blue, 676px 559px blue, 57px 333px blue, 166px 636px blue, 1923px 1788px blue, 160px 351px blue, 1728px 1741px blue, 1231px 1810px blue, 1198px 1492px blue, 1914px 279px blue, 96px 1080px blue, 999px 586px blue, 527px 647px blue, 1256px 1084px blue, 646px 928px blue, 118px 1156px blue, 1135px 1274px blue, 1884px 1186px blue, 912px 1676px blue, 631px 1292px blue, 1159px 356px blue, 1582px 1386px blue, 454px 465px blue, 212px 64px blue, 1236px 1775px blue, 733px 406px blue, 1687px 477px blue, 1382px 1840px blue, 364px 1108px blue, 1543px 1506px blue, 198px 1049px blue, 898px 1494px blue, 1452px 1093px blue, 475px 898px blue, 1237px 248px blue, 1314px 1082px blue, 1766px 1715px blue, 1922px 371px blue, 839px 1676px blue, 1859px 1831px blue, 145px 1816px blue, 1322px 1991px blue, 814px 47px blue, 1339px 1414px blue, 1186px 451px blue, 1541px 835px blue, 1527px 1231px blue, 1673px 1466px blue, 1206px 160px blue, 736px 448px blue, 919px 1850px blue, 929px 1750px blue, 1656px 271px blue, 1380px 774px blue;
     animation: animStar 150s linear infinite;
@@ -45,7 +53,8 @@
 #stars3:after {
     content: " ";
     position: absolute;
-    top: 2000px;
+    z-index: 100;
+    top: 0px;
     width: 3px;
     height: 3px;
     background: transparent;
